update of attendee done